--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 /* HEADER PAGINA*/
 header {
-    height: 120px;
+    height: 100px;
     background-image: url(../img/wall.png);
     background-position: center;
     background-size: 30%;
@@ -18,9 +18,16 @@ header {
 }
 
 header h1 {
-    font-size: 60px;
+    font-size: 55px;
     font-family: "Edu TAS Beginner", serif;
     font-optical-sizing: auto;
     font-weight: bold;
     font-style: normal;
+}
+
+/* MAIN PAGINA */
+main {
+    background-image: url(../img/cork.png);
+    background-size: 30%;
+    height: 100vh;
 }
