--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,20 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: "Edu TAS Beginner", serif;
+    font-optical-sizing: auto;
+    font-weight: bold;
+    font-style: normal;
+
+}
+
+p {
+    margin-bottom: 10px;
+    font-size: 10px;
+    
+}
+
 /* HEADER PAGINA*/
 header {
     height: 100px;
@@ -19,15 +33,35 @@ header {
 
 header h1 {
     font-size: 55px;
-    font-family: "Edu TAS Beginner", serif;
-    font-optical-sizing: auto;
     font-weight: bold;
-    font-style: normal;
+   
 }
 
 /* MAIN PAGINA */
 main {
     background-image: url(../img/cork.png);
     background-size: 30%;
-    height: 100vh;
+    
+}
+
+/* card */
+.card-img-top {
+    padding: 10px;
+}
+
+h5 {
+    line-height: 0%;
+    font-size: 17px;
+    font-weight: bold;
+}
+
+.card-title {
+    margin-bottom: .7rem;
+}
+
+.card-text {
+    font-family: "Sometype Mono", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    color: gray;
 }
