--- a/css/style.css
+++ b/css/style.css
@@ -88,4 +88,61 @@ h5 {
     width: 20px;
 }
 
+/* MODAL IMG E BUTTON */
+
+/* modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  
+ 
+  .modal.show {
+    display: flex; 
+  }
+  
+  .modal-content {
+    position: relative;
+    max-width: 70%;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  /* Immagine all'interno del modal */
+  .modal img {
+    max-width: 50%;
+    display: block;
+    margin-bottom: 50px;
+    
+  }
+  
+  /* button */
+  .close-button {
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    border: none;
+    font-size: 16px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding: 6px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-bottom: 10px;
+  }
+  
+  .close-button:hover {
+    background-color: #e9dfdf;
+  }
+  
+  
+  
+
 
